--- a/style.css
+++ b/style.css
@@ -84,3 +84,11 @@ section p {
 section ul {
     padding-left: 3rem;
 }
+section ul li a {
+    color: var(--lightblue);
+    transition: ease-in-out .2s;
+}
+section ul li a:hover {
+    color: var(--grey);
+    text-decoration: none;
+}
