--- a/style.css
+++ b/style.css
@@ -35,12 +35,12 @@ header h2{
     padding: 1rem 2rem;
 }
 
-button.active {
+.active {
     color: white;
     background-color: var(--lightblue);
     border-color: var(--lightblue);
 }
-button.active:hover {
+.active:hover {
     color: var(--grey);
     border-color: var(--lightblue);
 }
